@@ -112,6 +112,7 @@ WHAT IS NEW?
     * There are now 3 NPC extra data fields (0-2) accessible with
       "set NPC extra" instead of 2 [Ralph]
     * "suspend timers", and "resume timers" [James]
+    * "activate menu item" [James]
 
   * Vikings of Midgard
 
